--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore application configuration
+/config/application.yml
+config/credentials.yml.enc
+config/credentials.yml.enc
+config/application.yml
