--- a/config/application.yml
+++ b/config/application.yml
@@ -9,4 +9,4 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-OTP_SECRET_KEY: '195cedca80601175d661fe34d4cb0b46'
+OTP_SECRET_KEY: 'YOUR_MASTER_KEY_HERE'
