--- a/config/application.yml
+++ b/config/application.yml
@@ -9,4 +9,4 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-OTP_SECRET_KEY: 'YOUR_MASTER_KEY_HERE'
+OTP_SECRET_KEY: 'c0090b4d4822c1f1f4333756408d979a'
